<resources>
    <string name="app_name">Image Match</string>
    <string name="button_1">Start</string>
    <string name="button_2">Level</string>
    <string name="button_3">Exit</string>
    <string name="button_4">Info</string>
    <string-array name="list_name">
        <item>p1</item>
        <item>p2</item>
        <item>p3</item>
        <item>p4</item>
        <item>p5</item>
        <item>p6</item>
        <item>p7</item>
        <item>p8</item>
        <item>p9</item>
        <item>p10</item>
        <item>p11</item>
        <item>p12</item>
        <item>p13</item>
        <item>p14</item>
        <item>p15</item>
        <item>p16</item>
        <item>p17</item>
        <item>p18</item>
        <item>p19</item>
        <item>p20</item>
        <item>p21</item>
        <item>p22</item>
        <item>p23</item>
        <item>p24</item>
        <item>p25</item>
        <item>p26</item>
        <item>p27</item>
        <item>p28</item>
        <item>p29</item>
        <item>p30</item>
        <item>p31</item>
        <item>p32</item>
        <item>p33</item>
        <item>p34</item>
        <item>p35</item>
        <item>p36</item>
    </string-array>
    <string name="l1">Level 1</string>
    <string name="l2">Level 2</string>
    <string name="l3">Level 3</string>
    <string name="l4">Level 4</string>
    <string name="l5">Level 5</string>
    <string name="txtdiem">Point</string>
    <string name="txttime">Time</string>
    <string name="menu1">Continue</string>
    <string name="menu2">Restart</string>
    <string name="menu3">Quit</string>
    <string name="thongbao">Notification</string>
    <string name="time">Time Out. Game Over</string>
    <string name="diem">You Win</string>
    <string name="infomake">Application developed by</string>
    <string name="infosv">Ngô Xuân Trà</string>
</resources>
