<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewLost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="@dimen/sp20"
        android:gravity="center"
        android:textColor="#E61607"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/sp14"
            android:text="@string/menu2"
            android:background="@drawable/custom_button_2"
            android:layout_margin="@dimen/dp16"
            android:id="@+id/rs2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu3"
            android:background="@drawable/custom_button_2"
            android:textSize="@dimen/sp14"
            android:layout_margin="@dimen/dp16"
            android:id="@+id/q2"/>

    </LinearLayout>

</LinearLayout>