<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewWin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/diem"
        android:textSize="@dimen/sp20"
        android:layout_margin="@dimen/dp16"
        android:textColor="#E61607"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textSize="@dimen/sp14"
            android:text="@string/menu2"
            android:background="@drawable/custom_button_2"
            android:layout_margin="@dimen/dp16"
            android:id="@+id/rs1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu3"
            android:background="@drawable/custom_button_2"
            android:textSize="@dimen/sp14"
            android:layout_margin="@dimen/dp16"
            android:id="@+id/q1"/>

    </LinearLayout>
</LinearLayout>